# Food_symptoms_parser

./: README.md  pyproject.toml  tailwind.config.js
data/: parsed_store.jsonl
src/: manage.py
src/healthparse/: settings.py  urls.py  wsgi.py
src/lightparse/: cli.py
src/lightparse/parsers/: food.py  symptom.py
src/lightparse/pipeline/: light_pipeline.py
src/lightparse/utils/: text.py
src/ui/: storage.py  urls.py  views.py
templates/: base.html  dashboard.html  entry_detail.html  upload.html
templates/components/: food_table.html  navbar.html  stat_card.html  symptom_table.html
tests/: test_food_parser.py  test_pipeline.py  test_symptom_parser.py
